# meta

./: Cargo.toml
migrations/2020-11-09-235532_initial/: down.sql  up.sql
src/: database.rs  main.rs
src/cli/: argparse.rs  args.rs  help.rs  lang.rs  mod.rs  print.rs  program.rs  queryparse.rs  typo.rs
src/cli/query/: args.rs  lex.rs  lexeme.rs  mod.rs  parse.rs  selector.rs
src/cli/subcommands/: get.rs  list.rs  mod.rs  remove.rs  set.rs
src/collections/: LRUCache.rs  MRUCache.rs  mod.rs  mrucache.rs
src/database/: database.rs  mod.rs  models.rs  option_result.rs  path.rs  schema.rs  sqlite.rs
src/filesystem/: fs.rs  mod.rs  xattr.rs
src/format/: mod.rs  prettify.rs  re.rs  str.rs
src/functional/: either.rs  lazy.rs  mod.rs
src/linq/: collectors.rs  group_by.rs  mod.rs
src/os/: mod.rs
src/os/unix/: mod.rs  xattr.rs
