[package]
name = "meta"
version = "0.1.0"
authors = ["Jonathan Lemos <jonathanlemos@protonmail.com>"]
description = "A command-line utility for managing file metadata."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["sqlite"] }
diesel_migrations = "1.4.0"

atty = "0.2.14"
clap = "2.33.3"
colored = "2.0.0"
fancy-regex = "0.4.1"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.60"
term_size = "0.3.2"
toml = "0.5.7"
walkdir = "2.3.1"
xattr = { version = "0.2.2", default_features = false }
